[project]
name = "baseline"
version = "0.1.0"
description = "A simple GPT baseline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "gnureadline>=8.2.13",
    "ipdb>=0.13.13",
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
